# SRIR_PROJECT

./: input.txt  main.cpp  makefile  node.cpp  readme.MD
MPI/: CMakeLists.txt  input.txt  main.cpp  makefile  node.cpp  node.h  readme.MD
PGAS/: input.txt  main.cpp  makefile  node.cpp  node.h  nodes  output.txt  run
